fix vanishing image problem on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1212,7 +1212,6 @@ table {
 
 @media only screen and (max-width: 37.5rem) {
     table {
-        display: none
     }
 }
 
